# xbmc-sources-fork

cximage-6.0/: Makefile
cximage-6.0/CxImage/: ximagif.cpp
cximage-6.0/tiff-3.8.2/: Makefile  config.status  libtool
dvdplayer/libfaad2/: Makefile  Makefile.am  Makefile.in  build-plex.sh  common.h  config.h  config.h.in  config.status  configure  configure.in  libtool
libass-0.9.5/: Changelog  Makefile.am  Makefile.in  configure  configure.ac
libass-0.9.5/libass/: Makefile.am  Makefile.in
libass/libass/: ass_fontconfig.c
libnemesi/: Makefile.in  aclocal.m4  build-plex.sh  config.h.in  configure
libnemesi/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libnemesi/bufferpool/: Makefile.in
libnemesi/creativecommons/: Makefile.in
libnemesi/example/: Makefile.in
libnemesi/parsers/: Makefile.in
libnemesi/rtcp/: Makefile.in
libnemesi/rtp/: Makefile.in
libnemesi/rtsp/: Makefile.in
libnemesi/sdp/: Makefile.in  sdp_session_setup.c
libnemesi/utils/: Makefile.in  random32.c  transport.c
libnetembryo/: ChangeLog  INSTALL  Makefile.am  Makefile.in  aclocal.m4  build-plex.sh  config.h.in  configure  configure.ac
libnetembryo/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libnetembryo/include/: ssl.h  wsocket-internal.h  wsocket.h
libnetembryo/wsocket/: Makefile.am  Makefile.in  Sock.c  get_info.c  multicast.c  sock_ntop_host.c  socket.c  ssl.c
paplayer/mac-3.99-u4-b5/src/MACDll/: MACDll.cpp  MACDll.h  MACDll.vcproj  Makefile.am  Makefile.in
portaudio/: Makefile  config.status  libtool
(+300 files in other folders)
